--- a/Newwebsite/index.html
+++ b/Newwebsite/index.html
@@ -6,7 +6,7 @@
 
     <body>
     <h1>Welcome to My Page</h1>
-    <p>Hi, I'm Sagar. This is my webpage.</p>
+    <p>Hi, I'm Sagar. This is my webpage. I changed the main file into index.html, Now let's wait </p>
             <a href="about.html">About Me</a><br>
             <a href="G8Project.html">Projects</a><br>
 
