--- a/Newwebsite/index.html
+++ b/Newwebsite/index.html
@@ -1,16 +1,12 @@
-<html>
-    <head>
-      <title> Sagar's Website </title>
-      <link rel="stylesheet" href="design.css">
-    </head>
-
-    <body>
-    <h1>Welcome to My Page</h1>
-    <p>Hi, I'm Sagar. This is my webpage. I changed the main file into index.html, Now let's wait </p>
-            <a href="about.html">About Me</a><br>
-            <a href="G8Project.html">Projects</a><br>
-
-      <width="40%" align="right">
-      <img src="sea.jpg" width="200" height="200">
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sagar's Info Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Welcome to My Info Website</h1>
+  <p>This is a test page made by me. Hope it works </p>
+</body>
 </html>
