--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="two.JPG" alt="..." height="200" width="200"/>
+                <img class="masthead-avatar mb-5" src="two.jpg" alt="..." height="200" width="200"/>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Sagar Dhakal</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Programmer</p>
+                <p class="masthead-subheading font-weight-light mb-0">K xa Ujjwal gober bhai? Ujeli khai ta?</p>
                 <nav>
                     <a href="http://youtube.com"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.linkedin.com/in/sagardhakal99/"><i class="fab fa-linkedin-f"></i></a>
