--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Sagar Dhakal</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">K xa Ujjwal gober bhai? Ujeli khai ta?</p>
+                <p class="masthead-subheading font-weight-light mb-0"> Student </p>
+                <svg width="300" height="200">
+  <polygon points="100,10 40,198 190,78 10,78 160,198"
+  style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
+                </svg>
                 <nav>
                     <a href="http://youtube.com"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.linkedin.com/in/sagardhakal99/"><i class="fab fa-linkedin-f"></i></a>
