Updated intro video

--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="two.jpg" alt="..." height="200" width="200"/>
+                <img class="masthead-avatar mb-5" src="two.jpg" alt="..." height="150" width="220"/>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Sagar Dhakal</h1>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0"> Student </p>
-                <svg width="300" height="200">
-  <polygon points="100,10 40,198 190,78 10,78 160,198"
-  style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
-                </svg>
+
+
+
+                <video width="320" height="240" autoplay>
+  <source src="intro.mp4" type="video/mp4">
+                </video>
+
+                
                 <nav>
                     <a href="http://youtube.com"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.linkedin.com/in/sagardhakal99/"><i class="fab fa-linkedin-f"></i></a>
