Updated video with muted

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-                <video width="320" height="240" autoplay>
+                <video width="320" height="240" autoplay muted playsinline>
   <source src="intro.mp4" type="video/mp4">
                 </video>
 
