Updated my org. photo

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="two.jpg" alt="..." height="150" width="220"/>
+                <img class="masthead-avatar mb-5" src="sd.JPG" alt="..." height="200" width="280"/>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Sagar Dhakal</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"> Student </p> <br> Watch my introduction video. 
+                <p class="masthead-subheading font-weight-light mb-0"> Student </p> <p> Watch my introduction video.  </p>
                 
 
 
